Splash screen quick alignment fix.

--- a/mpg-tracker/scss/main.scss
+++ b/mpg-tracker/scss/main.scss
@@ -150,6 +150,10 @@ h3 {
     line-height: 21px;
 }
 
+.h-100 {
+    height: 100%;
+}
+
 .main-content {
     margin-top: 80px;
 }
@@ -181,6 +185,8 @@ h3 {
 }
 
 .page-splash {
+    height: 100%;
+
     .app {
         @extend .d-flex;
         @extend .align-items-center;
